--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -24,13 +24,34 @@ header {
 header>h1 {
   margin: var(--z);
   padding: var(--z);
+  text-decoration: none;
+  color: #fff;
 }
+header h1 a
+{
+  text-decoration: none;
+  color: #fff;
+}
+.options
+{
+  width: 50%;
+  height: 60px;
+
+  padding-top: 20px;
+  padding-left: 20px;
+  
+}
+
+
+
+
+
 main {
   display: var(--f);
   flex-flow: var(--rnw);
   align-items: var(--c);
   justify-content: var(--c);
-  width: var(--maxW);
+  width: 100%;
   height: calc(var(--maxH) - calc(var(--head) * 2));
   text-align: var(--c);
   background-image: url(./media/img/blob.svg);
@@ -38,12 +59,20 @@ main {
   background-position: var(--c);
   background-repeat: no-repeat;
 }
+section
+{
+  width: 40%;
+}
+.time
+{
+  font-size: 40px;
+}
 section:nth-child(1) {
   display: var(--f);
   flex-flow: var(--cnw);
   align-items: var(--c);
   justify-content: var(--c);
-  width: calc(var(--head) * 8.5);
+  width: 50%;
   height: calc(var(--head) * 10);
   color: var(--fontColor); 
 }
@@ -54,20 +83,22 @@ section:nth-child(1)>menu {
   display: table-row;
   flex-flow:nowrap;
   align-items: center;
-  justify-content :baseline;
-  width: calc(var(--head) x 2.2);
+  width: calc(var(--head) x 5);
   height: calc(var(--head) x 10);
   margin-top: calc(var(--head) / 1.2);
   padding: 0;
+  justify-content: center;
 }
 section:nth-child(1)>menu>nav {
   display:block;
   flex-flow: var(--rnw);
   align-items: var(--c);
   justify-content: var(--fs);
-  width: calc(var(--head) x 2.2);
-  height: calc(var(--head) x 2.5);
+  width: 100%;
+  height: calc(var(--head) * 2.5);
   transition: .1s ease;
+  text-align: center;
+  justify-content: center;
 }
 
 section:nth-child(1)>menu>nav:hover {
@@ -78,14 +109,19 @@ section:nth-child(1)>menu>nav>a {
   display: var(--f);
   flex-flow: var(--rnw);
   align-items: var(--c);
-  justify-content: var(--fs);
-  width: calc(var(--head) x 5);
+  justify-content: center;
+  width: calc(var(--head) * 10);
   height: calc(var(--head) x 2.5);
   padding: calc(var(--head) / 3);
   border-radius: calc(var(--head) / 4);
   text-decoration: none;
   font-size: var(--head);
   color: var(--fontColor);
+  transition: .2s ease;
+}
+section:nth-child(1) menu nav a:hover
+{
+  font-size: 50px;
 }
 
 section:nth-child(1)>menu>nav>a>img {
@@ -95,6 +131,7 @@ section:nth-child(1)>menu>nav>a>img {
   filter: invert(2) brightness(.8);
 }
 
+
 .lightDarkButton
 {
   background-color: #9dd0df;
@@ -102,8 +139,15 @@ section:nth-child(1)>menu>nav>a>img {
   font-size: 20px;
   color: #17596d;
   border: none;
-  width: 55%;
-  height: 10%;
+  width: 6%;
+  height: 75%;
+  padding-right: 40px ;
+  transition: .1s ease-in;
+}
+
+.lightDarkButton:nth-child(1):hover
+{
+  width: 7%;
 }
 
 .promoButtons
@@ -112,6 +156,7 @@ section:nth-child(1)>menu>nav>a>img {
   width: 100%;
   align-items: center;
   text-align: center;
+  
 }
 
 .audioButton
@@ -120,20 +165,31 @@ section:nth-child(1)>menu>nav>a>img {
   border-radius: 20px;
   color: #17596d;
   background-color: #9dd0df;
-  width: 120px;
+  width: 200px;
   height: 50px;
   margin-bottom: 10px;
   margin-left: 50px;
   margin-right: 50px;
-
+  transition: .2s ease;
 }
+
+.audioButton:hover
+{
+  scale: 120%;
+  cursor:pointer;
+}
+
 
 footer
 {
   width: 100%;
+  height: 10%;
   align-items: center;
   text-align: center;
+  background-color: hsla(210, 7%, 17%, .9);
 }
+
+
 .bcCard{
   align-items: center;
   text-align: center;
@@ -143,6 +199,41 @@ footer
 
 .info{
   width: 100%;
+}
+
+
+
+footer p
+{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  color: rgb(255, 255, 255);
+
+}
+
+footer a
+{
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  transition: .2s ease-in-out;
+}
+
+
+
+.credits
+{
+  font-size: 20px;
+}
+
+.credits a
+{
+  font-size: 20px;
+  transition: .1s ease-in-out;
+}
+
+.credits a:hover
+{
+  font-size: 25px;
 }
 
 audio {
