--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -44,7 +44,25 @@ header h1 a
 
 
 
+.mainTitle
+{
+  display: block;
+  text-align: center;
+  align-items: center;
+  width: 100%;
+  background: none;
+}
 
+.mainTitle h3
+{
+  color: white;
+  font-size: 30px;
+}
+.mainTitle h5
+{
+  color: white;
+  font-size: 20px;
+}
 
 main {
   display: var(--f);
