--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -183,7 +183,7 @@ section:nth-child(1)>menu>nav>a>img {
   border-radius: 20px;
   color: #17596d;
   background-color: #9dd0df;
-  width: 200px;
+  width: 230px;
   height: 50px;
   margin-bottom: 10px;
   margin-left: 50px;
@@ -195,6 +195,7 @@ section:nth-child(1)>menu>nav>a>img {
 {
   scale: 120%;
   cursor:pointer;
+  background-color: #c3dae1;
 }
 
 
