--- a/style.css
+++ b/style.css
@@ -155,23 +155,31 @@ section:nth-child(1)>menu>nav>a>img {
 }
 
 
-.lightDarkButton
-{
+.lightDarkButton {
   background-color: #9dd0df;
   border-radius: 20px;
   font-size: 20px;
   color: #17596d;
   border: none;
-  width: 20px;
-  height: 23px;
-  padding-right: 40px ;
-  transition: .1s ease-in;
+  width: 40px; /* Ajuste la largeur */
+  height: 25px; /* Ajuste la hauteur */
+  padding: 0; /* Supprime le padding initial pour éviter les déformations */
+  transition: all .2s ease-in-out;
+  display: flex; /* Pour centrer l'icône */
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
-.lightDarkButton:nth-child(1):hover
-{
-  width: 22px;
+.lightDarkButton:hover {
+  background-color: #2e373a;
+  color: #b9babb;
+  width: 45px; /* Légère augmentation de la largeur */
+  height: 30px; /* Légère augmentation de la hauteur */
+  cursor: pointer;
+  transition: all .2s ease-in-out; /* Transition plus fluide */
 }
+
 
 .promoButtons
 {
@@ -207,7 +215,7 @@ section:nth-child(1)>menu>nav>a>img {
 footer
 {
   width: 100%;
-  height: 10%;
+  height: 13%;
   align-items: center;
   text-align: center;
   background-color: hsla(210, 7%, 17%, .9);
@@ -230,6 +238,11 @@ footer p
   font-size: 30px;
   color: rgb(255, 255, 255);
 
+}
+
+.mail
+{
+  font-size: 20px;
 }
 
 footer a
